# cmake-add_subdirectory-demo

./: .gitignore  CMakeLists.txt
calc/: CMakeLists.txt
include/: sort.h
sort/: CMakeLists.txt
sort/src/: insert.c
test1/: CMakeLists.txt
test1/src/: calc.c
test2/: CMakeLists.txt
test2/src/: sort.c
